cabal-version:      2.4
name:               projective-plane
version:            0.1.0.0
author:             Owen Bechtel
maintainer:         ombspring@gmail.com

license:            MIT
license-file:       LICENSE
extra-source-files: README.md

executable projective-plane
    hs-source-dirs:   app
    default-language: Haskell2010
    main-is:          Main.hs
    ghc-options:      -W -O2 -threaded

    build-depends:
      base ^>=4.14.1.0,
      gloss,
      linear
